--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "game"
-version = "1.3.2"
+version = "2.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,7 +11,6 @@ mongodb = { version = "2.6.0", default-features = false, features = ["tokio-sync
 tokio = { version = "1.0", features = ["sync"] }
 version = "3.0.0"
 rand = "0.8.5"
-raster = "0.2.0"
 whoami = "1.4.1"
-random_word = "0.3.1"
 serde = "1.0.177"
+run_script = "0.10.1"
