--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "game"
-version = "2.0.0"
+version = "23.10.15-a "
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
